@@ -60,7 +60,7 @@ struct _GHashTable
   GDestroyNotify   value_destroy_func;
 };
 
-/**
+/*
  * g_hash_table_lookup_node:
  * @hash_table: our #GHashTable
  * @key: the key to lookup against
@@ -88,7 +88,7 @@ struct _GHashTable
  * non-%NULL then the computed hash value is returned.  This is to
  * save insertions from having to compute the hash record again for
  * the new record.
- **/
+ */
 static inline GHashNode **
 g_hash_table_lookup_node (GHashTable    *hash_table,
                           gconstpointer  key,
@@ -137,7 +137,7 @@ g_hash_table_lookup_node (GHashTable    *hash_table,
   return node_ptr;
 }
 
-/**
+/*
  * g_hash_table_remove_node:
  * @hash_table: our #GHashTable
  * @node_ptr_ptr: a pointer to the return value from
@@ -166,7 +166,7 @@ g_hash_table_lookup_node (GHashTable    *hash_table,
  * either a pointer to the next node or a %NULL pointer as
  * appropriate, the pointer at the end of @node_ptr_ptr will never be
  * modified at all.  Stay tuned. :)
- **/
+ */
 static void
 g_hash_table_remove_node (GHashTable   *hash_table,
                           GHashNode  ***node_ptr_ptr,
@@ -190,7 +190,7 @@ g_hash_table_remove_node (GHashTable   *hash_table,
   hash_table->nnodes--;
 }
 
-/**
+/*
  * g_hash_table_remove_all_nodes:
  * @hash_table: our #GHashTable
  * @notify: %TRUE if the destroy notify handlers are to be called
@@ -200,7 +200,7 @@ g_hash_table_remove_node (GHashTable   *hash_table,
  *
  * If @notify is %TRUE then the destroy notify functions are called
  * for the key and value of the hash node.
- **/
+ */
 static void
 g_hash_table_remove_all_nodes (GHashTable *hash_table,
                                gboolean    notify)
@@ -215,7 +215,7 @@ g_hash_table_remove_all_nodes (GHashTable *hash_table,
   hash_table->nnodes = 0;
 }
 
-/**
+/*
  * g_hash_table_resize:
  * @hash_table: our #GHashTable
  *
@@ -223,7 +223,7 @@ g_hash_table_remove_all_nodes (GHashTable *hash_table,
  * nodes currently held.  If you call this function then a resize will
  * occur, even if one does not need to occur.  Use
  * g_hash_table_maybe_resize() instead.
- **/
+ */
 static void
 g_hash_table_resize (GHashTable *hash_table)
 {
@@ -255,7 +255,7 @@ g_hash_table_resize (GHashTable *hash_table)
   hash_table->size = new_size;
 }
 
-/**
+/*
  * g_hash_table_maybe_resize:
  * @hash_table: our #GHashTable
  *
@@ -263,7 +263,7 @@ g_hash_table_resize (GHashTable *hash_table)
  *
  * Essentially, calls g_hash_table_resize() if the table has strayed
  * too far from its ideal size for its number of nodes.
- **/
+ */
 static inline void
 g_hash_table_maybe_resize (GHashTable *hash_table)
 {
@@ -470,7 +470,7 @@ g_hash_table_lookup_extended (GHashTable    *hash_table,
   return TRUE;
 }
 
-/**
+/*
  * g_hash_table_insert_internal:
  * @hash_table: our #GHashTable
  * @key: the key to insert
@@ -485,7 +485,7 @@ g_hash_table_lookup_extended (GHashTable    *hash_table,
  * Do a lookup of @key.  If it is found, replace it with the new
  * @value (and perhaps the new @key).  If it is not found, create a
  * new node.
- **/
+ */
 static void
 g_hash_table_insert_internal (GHashTable *hash_table,
                               gpointer    key,
@@ -577,7 +577,7 @@ g_hash_table_replace (GHashTable *hash_table,
   return g_hash_table_insert_internal (hash_table, key, value, TRUE);
 }
 
-/**
+/*
  * g_hash_table_remove_internal:
  * @hash_table: our #GHashTable
  * @key: the key to remove
@@ -589,7 +589,7 @@ g_hash_table_replace (GHashTable *hash_table,
  *
  * Do a lookup of @key and remove it if it is found, calling the
  * destroy notify handlers only if @notify is %TRUE.
- **/
+ */
 static gboolean
 g_hash_table_remove_internal (GHashTable    *hash_table,
                               gconstpointer  key,
@@ -687,7 +687,7 @@ g_hash_table_steal_all (GHashTable *hash_table)
   g_hash_table_maybe_resize (hash_table);
 }
 
-/**
+/*
  * g_hash_table_foreach_remove_or_steal:
  * @hash_table: our #GHashTable
  * @func: the user's callback function
@@ -703,7 +703,7 @@ g_hash_table_steal_all (GHashTable *hash_table)
  *
  * If @notify is true then the destroy notify handlers will be called
  * for each removed node.
- **/
+ */
 static guint
 g_hash_table_foreach_remove_or_steal (GHashTable *hash_table,
                                       GHRFunc	  func,
