@@ -1,3 +1,7 @@
+2007-12-05  Ryan Lortie  <desrt@desrt.ca>
+
+	* glib/ghash.c: ungtk-docify some comments for internal functions
+
 2007-12-04  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gio/glocalfileinfo.c: Replace the copy-and-paste MD5 digest
